--- a/server/config.env
+++ b/server/config.env
@@ -8,13 +8,7 @@ REFRESH_JWT_EXPIRES_IN=30d
 
 BCRYPT_SALT = 12
 RESET_TOKEN_EXPIRE_IN=36000
-EMAIL_ID=digilibrary639@gmail.com
-EMAIL_AUTH=mwvk ptti dbwi rtqa
+EMAIL_ID=fulltoss433@gmail.com
+EMAIL_AUTH=vxoa mjub xeka zhws
 FRONT_END_LINK = "http://localhost:3000"
-CLOUDINARY_URL=cloudinary://949365888939798:q5Jd6W753hBUbc5yWFxRaaHIbsk@ddgyxhpwx
-CLOUDINARY_SECRET=q5Jd6W753hBUbc5yWFxRaaHIbsk
-CLOUDINARY_KEY=949365888939798
-CLOUD_NAME = ddgyxhpwx
-GoogleAuthPassword = digilibrary@iitbbs&2024-04-01webTeam9874567890
-GOOGLE_CLIENT_ID=471449447084-vv6cqnhpovccle08u04bj2l2rlas3nkh.apps.googleusercontent.com
 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
