--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@stripe/react-stripe-js": "^3.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
+    "stripe": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
