--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
