--- a/server/config.env
+++ b/server/config.env
@@ -10,5 +10,5 @@ BCRYPT_SALT = 12
 RESET_TOKEN_EXPIRE_IN=36000
 EMAIL_ID=fulltoss433@gmail.com
 EMAIL_AUTH=vxoa mjub xeka zhws
-FRONT_END_LINK = "http://localhost:3000"
+FRONT_END_LINK = "https://ipl-fulltoss-kfi8.vercel.app"
 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
